# sieve

./: .gitignore  README.md  demo.tape  pyproject.toml
sieve/: cli.py  db.py  models.py
sieve/curate/: dataset.py
sieve/dedup/: semantic.py
sieve/ingest/: base.py  jsonl.py
sieve/score/: base.py  combined.py  heuristic.py  ifd.py  llm_judge.py
sieve/trigger/: axolotl.py
tests/: test_dataset.py  test_dedup.py  test_ifd.py  test_ingest.py  test_llm_judge.py  test_score.py
