[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trainsieve"
version = "0.1.0"
description = "Production LLM traces → curated training datasets → fine-tune pipeline"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "jsonlines>=4.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0", "faiss-cpu>=1.8"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
all = ["sentence-transformers>=3.0", "faiss-cpu>=1.8", "anthropic>=0.40", "openai>=1.50"]

[project.scripts]
sieve = "sieve.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sieve"]
